--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "framer-motion": "^12.23.22",
@@ -15,7 +17,12 @@
     "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.1",
     "@eslint/eslintrc": "^3",
+    "@storybook/addon-a11y": "^9.1.10",
+    "@storybook/addon-docs": "^9.1.10",
+    "@storybook/addon-onboarding": "^9.1.10",
+    "@storybook/addon-vitest": "^9.1.10",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query": "^5.90.2",
     "@testing-library/jest-dom": "^6.9.1",
@@ -27,9 +34,16 @@
     "@types/testing-library__react": "^10.0.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "eslint-plugin-storybook": "^9.1.10",
     "install": "^0.13.0",
     "npm": "^11.6.1",
+    "storybook": "^9.1.10",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@storybook/nextjs-vite": "^9.1.10",
+    "vitest": "^3.2.4",
+    "@vitest/browser": "^3.2.4",
+    "playwright": "^1.55.1",
+    "@vitest/coverage-v8": "^3.2.4"
   }
 }
