--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "eslint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "vitest",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "framer-motion": "^12.23.22",
@@ -23,6 +25,7 @@
     "@storybook/addon-docs": "^9.1.10",
     "@storybook/addon-onboarding": "^9.1.10",
     "@storybook/addon-vitest": "^9.1.10",
+    "@storybook/nextjs-vite": "^9.1.10",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query": "^5.90.2",
     "@testing-library/jest-dom": "^6.9.1",
@@ -32,18 +35,18 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/testing-library__react": "^10.0.1",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "eslint-plugin-storybook": "^9.1.10",
     "install": "^0.13.0",
+    "jsdom": "^27.0.0",
     "npm": "^11.6.1",
+    "playwright": "^1.55.1",
     "storybook": "^9.1.10",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "@storybook/nextjs-vite": "^9.1.10",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "^3.2.4",
-    "playwright": "^1.55.1",
-    "@vitest/coverage-v8": "^3.2.4"
+    "vitest": "^3.2.4"
   }
 }
