--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@storybook/addon-docs": "^9.1.10",
     "@storybook/addon-onboarding": "^9.1.10",
     "@storybook/addon-vitest": "^9.1.10",
+    "@storybook/nextjs": "^9.1.10",
     "@storybook/nextjs-vite": "^9.1.10",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query": "^5.90.2",
