--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:mock": "cross-env NEXT_PUBLIC_API_MOCKING=enabled next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
@@ -14,17 +15,14 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.22",
+    "msw-storybook-addon": "^2.0.5",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.1.1",
     "@eslint/eslintrc": "^3",
-    "@storybook/addon-a11y": "^9.1.10",
-    "@storybook/addon-docs": "^9.1.10",
-    "@storybook/addon-onboarding": "^9.1.10",
-    "@storybook/addon-vitest": "^9.1.10",
+    "@storybook/addon-essentials": "^9.1.1",
     "@storybook/nextjs": "^9.1.10",
     "@storybook/nextjs-vite": "^9.1.10",
     "@tailwindcss/postcss": "^4",
@@ -38,16 +36,23 @@
     "@types/testing-library__react": "^10.0.1",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "cross-env": "^10.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "eslint-plugin-storybook": "^9.1.10",
     "install": "^0.13.0",
     "jsdom": "^27.0.0",
+    "msw": "^2.11.3",
     "npm": "^11.6.1",
     "playwright": "^1.55.1",
     "storybook": "^9.1.10",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^3.2.4"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
