--- a/package.json
+++ b/package.json
@@ -21,30 +21,23 @@
     "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@storybook/addon-essentials": "^9.1.1",
+    "@storybook/addon-essentials": "^9.0.0-alpha.0",
     "@storybook/nextjs": "^9.1.10",
     "@storybook/nextjs-vite": "^9.1.10",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query": "^5.90.2",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
-    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/testing-library__react": "^10.0.1",
-    "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "cross-env": "^10.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "eslint-plugin-storybook": "^9.1.10",
-    "install": "^0.13.0",
     "jsdom": "^27.0.0",
     "msw": "^2.11.3",
-    "npm": "^11.6.1",
-    "playwright": "^1.55.1",
     "storybook": "^9.1.10",
     "tailwindcss": "^4",
     "typescript": "^5",
